--- a/MEXA_hackathon_promt_CalmCode.ipynb
+++ b/MEXA_hackathon_promt_CalmCode.ipynb
@@ -91,10 +91,10 @@
         "from google.colab import drive\n",
         "\n",
         "# Step 1: Mount your Google Drive\n",
-        "drive.mount('/content/drive')\n",
+        "drive.mount('')\n",
         "\n",
         "# Step 2: Set the file path based on the folder structure seen in the images\n",
-        "file_path = '/content/drive/My Drive/Colab Notebooks/anon_disorder_musics.csv'\n",
+        "file_path = '",
         "\n",
         "# Step 3: Load the CSV file using pandas\n",
         "import pandas as pd\n",
